--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ nav{
 /*HEADLINE*/
 
 
-header{
+/* header{
     background:rgb(163, 163, 163);
     margin: 30px;
     height: 300px;
@@ -67,4 +67,4 @@ header{
 .headline h2{
     display: inline-block;
     border: 1px solid green;
-}
+} */
