--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -5,5 +5,10 @@
 
     header{
         display: block;
+        justify-content: center;
+    }
+
+    .linksresponsive{
+        display: inline;
     }
 }
